prevent pre overflow

--- a/src/app.css
+++ b/src/app.css
@@ -31,6 +31,10 @@ a {
 	@apply border-l-2 px-3;
 }
 
+.post-body > pre {
+	max-width: 100vw;
+}
+
 .youtube-wrapper {
 	@apply flex justify-center mt-6 mb-6;
 }
